demo/kubernetes/required-owner-team.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: required-owner-team
spec:
  module: registry://registry.ereslibre.net/kubewarden/policies/requiredlabels:latest
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    resources:
    - deployments
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    labels:
    - key: owner-team
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
